--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,2 +1,18 @@
 ---
 name: CI
+
+on:
+  - push
+
+jobs:
+  function-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: cd func-dojo-cicd-skool
+      - run: npm ci
+      - run: npm i @azure/functions@3.5.1
+      - run: npm test
