--- a/func-dojo-cicd-skool/package.json
+++ b/func-dojo-cicd-skool/package.json
@@ -8,6 +8,7 @@
     "prestart": "npm run build",
     "start": "func start",
     "test": "jest ",
+    "coverage": "jest --coverage --coverageDirectory=../reports/jest ",
     "lint": "eslint './DojoCicdSkool/src/**/*.ts'",
     "lint-fix": "eslint './DojoCicdSkool/src/**/*.{tsx,ts}' --fix",
     "sonar": "sonarqube-verify",
@@ -23,7 +24,7 @@
     "eslint": "^8.40.0",
     "eslint-html-reporter": "0.7.4",
     "eslint-plugin-import": "2.27.5",
-    "jest": "29.5.0",
+    "jest": "^29.5.0",
     "jest-sonar-reporter": "^2.0.0",
     "sonarqube-scanner": "3.0.1",
     "sonarqube-verify": "^1.0.2",
